--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-  <header class="header bg-white">
+  <header class="header">
     <a class="logo link text-primary" href="/">
       <img class="logo-img" src="/images/logo.svg" alt="logo">
       <span>Лунное море</span>
@@ -22,91 +22,93 @@
   </header>
 
   <main class="main">
-    <section class="banner-section">
-      <img class="banner-img" src="/images/logo.svg" alt="banner">
+    <section class="top-section-bg">
+      <div class="container top-section">
+        <img class="top-section-logo" src="/images/logo.svg" alt="logo">
 
-      <h1 class="h1 text-white">ЖК «Лунное море»</h1>
+        <h1 class="h1 text-white">ЖК «Лунное море»</h1>
 
-      <h6 class="h6 font-weight-bold mb-3 text-white">Место, откуда не хочется улетать</h6>
+        <p class="font-weight-bold mb-3 text-white">Место, откуда не хочется улетать</p>
 
-      <a href="#contact-form" class="btn btn-default">Забронировать</a>
+        <a href="#contact-form" class="btn btn-default">Забронировать</a>
+      </div>
     </section>
 
-    <section id="advantages" class="section">
-      <div class="container">
-        <div class="row justify-content-between">
-          <div class="col advantages-item">
-            <h2 class="title mb-3">Уникальный вид</h2>
-            <p>Вид на космос из вашего окна. Мы построили дома с большими окнами, чтобы вы могли наслаждаться метеоритными потоками.</p>
-          </div>
+    <section id="advantages" class="container">
+      <div class="row justify-content-between">
+        <div class="col advantages-item">
+          <h2 class="title mb-3">Уникальный вид</h2>
+          <p>Вид на космос из вашего окна. Мы построили дома с большими окнами, чтобы вы могли наслаждаться метеоритными потоками.</p>
+        </div>
 
-          <div class="col advantages-item">
-            <h2 class="title mb-3">Инфраструктура</h2>
+        <div class="col advantages-item">
+          <h2 class="title mb-3">Инфраструктура</h2>
+          <p>
+            Прекрасные дороги рядом с домом. Много мест для прогулки.
+            Всего в 200 км. от посёлка находится кольцо гор Кордильеры, на которых вы сможете провести незабываемые выходные.
+          </p>
+        </div>
+
+        <div class="col advantages-item">
+          <h2 class="title mb-3">Близость к Москве</h2>
+          <p>При небольшой цене мы располагаемся близко к МКАД. Всего 384 000 километров и вы в самом сердце России.</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="about" class="bg-gray">
+      <div class="container">
+        <div class="media">
+          <div class="media-body">
+            <h2 class="title">О ЖК «Лунное море»</h2>
+
             <p>
-              Прекрасные дороги рядом с домом. Много мест для прогулки.
-              Всего в 200 км. от посёлка находится кольцо гор Кордильеры, на которых вы сможете провести незабываемые выходные.
+              Все чаще жители Москвы предпочитают загородный дом городской квартире, к тому же связь с мегаполисом не теряется – 
+              современные скоростные трассы позволяют без труда добираться до столицы и обратно.
+            </p>
+
+            <p>
+              Мы построили наши дома на самом близком к Солнцу спутнике, всего в 380 тысяч километров от Земли.
             </p>
           </div>
 
-          <div class="col advantages-item">
-            <h2 class="title mb-3">Близость к Москве</h2>
-            <p>При небольшой цене мы располагаемся близко к МКАД. Всего 384 000 километров и вы в самом сердце России.</p>
+          <div class="media-img-wrap">
+            <img class="media-img" src="/images/moon-1.jpg" alt="moon" />
           </div>
         </div>
       </div>
     </section>
 
-    <section id="about" class="section section-bg-dark">
-      <div class="container about-block">
-        <div class="media justify-content-center">
-          <div class="media-body">
-            <div class="about-text">
-              <h2 class="title mb-3">О ЖК «Лунное море»</h2>
-              <p>
-                Все чаще жители Москвы предпочитают загородный дом городской квартире, к тому же связь с мегаполисом не теряется – 
-                современные скоростные трассы позволяют без труда добираться до столицы и обратно.
-              </p>
-              <p class="mt-3">
-                Мы построили наши дома на самом близком к Солнцу спутнике, всего в 380 тысяч километров от Земли.
-              </p>
-            </div>
-          </div>
+    <section id="places" class="container">
+      <div class="media">
+        <div class="media-img-wrap">
+          <img class="media-img" src="/images/moon-2.jpg" alt="moon">
+        </div>
 
-          <img class="about-img" src="/images/moon-1.jpg" alt="moon" />
+        <div class="media-body">
+          <h2 class="title">Места для отдыха</h2>
+          <p>
+            Луна обладает всеми условиями для комфортного отдыха от большого города.
+            В вашем распоряжении 22 моря и 18 гор. Самое ближайшее кольцо гор всего в 200 километров от вашей квартиры.
+          </p>
+          <p>
+            Дома располагаются в новом районе «Лунные моря». При необходимости есть автобусы до района «Лунный материк».
+          </p>
         </div>
       </div>
     </section>
 
-    <section id="places" class="section">
-      <div class="container places-block">
-        <div class="media">
-          <img class="places-img" src="/images/moon-2.jpg" alt="moon">
-
-          <div class="media-body">
-            <div class="places-text">
-              <h2 class="title mb-3">Места для отдыха</h2>
-              <p>
-                Луна обладает всеми условиями для комфортного отдыха от большого города.
-                В вашем распоряжении 22 моря и 18 гор. Самое ближайшее кольцо гор всего в 200 километров от вашей квартиры.
-              </p>
-              <p class="mt-3">
-                Дома располагаются в новом районе «Лунные моря». При необходимости есть автобусы до района «Лунный материк».
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="section section-bg-dark">
-      <div class="contact-form-block">
+    <section class="bg-gray">
+      <div class="container contact-form-section">
         <h2 class="title mb-3">Оставьте заявку сегодня!</h2>
+
         <form id="contact-form" class="contact-form" action="/contact" method="POST">
           <fieldset class="contact-form-fieldset">
             <legend class="contact-form-legend font-weight-bold">Параметры квартиры</legend>
             
             <div class="form-group">
               <label class="form-label" for="rooms">Количество комнат:</label>
+
               <select class="form-control" id="rooms" name="rooms">
                 <option value="1">1</option>
                 <option value="2">2</option>
@@ -116,6 +118,7 @@
 
             <div class="form-group">
               <label class="form-label" for="decorations">Отделка:</label>
+
               <select class="form-control" id="decorations" name="rooms">
                 <option value="with-decoration">Без отделки</option>
                 <option value="without-decoration">С отделкой</option>
@@ -141,13 +144,14 @@
               <input class="form-control" id="email" name="email">
             </div>
           </fieldset>
+
           <button class="btn btn-secondary" type="submit">Отправить</button>
         </form>
       </div>
     </section>
   </main>
 
-  <footer class="section bg-dark">
+  <footer class="bg-dark">
     <div class="container">
       <div class="row justify-content-between">
         <div class="col">
