refactor: after review

--- a/src/index.html
+++ b/src/index.html
@@ -23,78 +23,72 @@
 
   <main class="main">
     <section class="top-section-bg">
-      <div class="container d-flex flex-column align-items-center pt-30 pb-30">
+      <div class="container d-flex flex-column align-items-center text-white">
         <img class="mw-130" src="/images/logo.svg" alt="logo">
 
-        <h1 class="h1 text-white">ЖК «Лунное море»</h1>
+        <h1>ЖК «Лунное море»</h1>
 
-        <p class="font-weight-bold mb-16 text-white">Место, откуда не хочется улетать</p>
+        <p class="font-weight-bold mb-16">Место, откуда не хочется улетать</p>
 
         <a href="#contact-form" class="btn btn-default">Забронировать</a>
       </div>
     </section>
 
     <section id="advantages">
-      <div class="container">
-        <div class="row justify-content-between">
-          <div class="mw-280">
-            <h2 class="title mb-16">Уникальный вид</h2>
-            <p>Вид на космос из вашего окна. Мы построили дома с большими окнами, чтобы вы могли наслаждаться метеоритными потоками.</p>
-          </div>
+      <div class="container row justify-content-between">
+        <div class="mw-280">
+          <h2 class="mb-16">Уникальный вид</h2>
+          <p>Вид на космос из вашего окна. Мы построили дома с большими окнами, чтобы вы могли наслаждаться метеоритными потоками.</p>
+        </div>
 
-          <div class="mw-280">
-            <h2 class="title mb-16">Инфраструктура</h2>
-            <p>
-              Прекрасные дороги рядом с домом. Много мест для прогулки.
-              Всего в 200 км. от посёлка находится кольцо гор Кордильеры, на которых вы сможете провести незабываемые выходные.
-            </p>
-          </div>
+        <div class="mw-280">
+          <h2 class="mb-16">Инфраструктура</h2>
+          <p>
+            Прекрасные дороги рядом с домом. Много мест для прогулки.
+            Всего в 200 км. от посёлка находится кольцо гор Кордильеры, на которых вы сможете провести незабываемые выходные.
+          </p>
+        </div>
 
-          <div class="mw-280">
-            <h2 class="title mb-16">Близость к Москве</h2>
-            <p>При небольшой цене мы располагаемся близко к МКАД. Всего 384 000 километров и вы в самом сердце России.</p>
-          </div>
+        <div class="mw-280">
+          <h2 class="mb-16">Близость к Москве</h2>
+          <p>При небольшой цене мы располагаемся близко к МКАД. Всего 384 000 километров и вы в самом сердце России.</p>
         </div>
       </div>
     </section>
 
     <section id="about" class="bg-gray">
       <div class="container">
-        <div class="media">
-          <div class="media-body">
-            <h2 class="title">О ЖК «Лунное море»</h2>
+        <div class="d-flex justify-content-around">
+          <div class="flex-basis-500">
+            <h2>О ЖК «Лунное море»</h2>
 
             <p>
               Все чаще жители Москвы предпочитают загородный дом городской квартире, к тому же связь с мегаполисом не теряется – 
               современные скоростные трассы позволяют без труда добираться до столицы и обратно.
             </p>
 
-            <p>
+            <p class="mt-20">
               Мы построили наши дома на самом близком к Солнцу спутнике, всего в 380 тысяч километров от Земли.
             </p>
           </div>
 
-          <div class="media-img-wrap">
-            <img class="media-img" src="/images/moon-1.jpg" alt="moon" />
-          </div>
+          <img class="mh-210" src="/images/moon-1.jpg" alt="moon" />
         </div>
       </div>
     </section>
 
     <section id="places">
       <div class="container">
-        <div class="media">
-          <div class="media-img-wrap">
-            <img class="media-img" src="/images/moon-2.jpg" alt="moon">
-          </div>
+        <div class="d-flex justify-content-around">
+          <img class="mh-210" src="/images/moon-2.jpg" alt="moon">
 
-          <div class="media-body">
-            <h2 class="title">Места для отдыха</h2>
+          <div class="flex-basis-500">
+            <h2>Места для отдыха</h2>
             <p>
               Луна обладает всеми условиями для комфортного отдыха от большого города.
               В вашем распоряжении 22 моря и 18 гор. Самое ближайшее кольцо гор всего в 200 километров от вашей квартиры.
             </p>
-            <p>
+            <p class="mt-20">
               Дома располагаются в новом районе «Лунные моря». При необходимости есть автобусы до района «Лунный материк».
             </p>
           </div>
@@ -104,7 +98,7 @@
 
     <section class="bg-gray">
       <div class="container d-flex flex-column align-items-center">
-        <h2 class="title mb-16px">Оставьте заявку сегодня!</h2>
+        <h2 class="mb-16px">Оставьте заявку сегодня!</h2>
 
         <form id="contact-form" class="contact-form" action="/contact" method="POST">
           <fieldset class="contact-form-fieldset">
@@ -157,27 +151,27 @@
 
   <footer class="bg-dark">
     <div class="container">
-      <div class="row justify-content-between">
+      <div class="row justify-content-between text-white">
         <div>
           <a class="logo link mb-16" href="/">
             <img class="logo-img" src="/images/logo.svg" alt="logo">
-            <span class="logo-text text-white">Лунное море</span>
+            <span class="logo-text">Лунное море</span>
           </a>
 
-          <div class="copyright text-white">&copy; 2032 год</div>
+          <div class="copyright">&copy; 2032 год</div>
         </div>
         <div>
-          <h3 class="title-small mb-16 text-white">Проектная документация</h3>
-          <ul class="list text-white">
-            <li><a class="link text-white" href="#">Скачать</a></li>
-            <li><a class="link text-white" href="#">Посмотреть на сайте</a></li>
+          <h3 class="mb-16">Проектная документация</h3>
+          <ul class="list">
+            <li><a class="link" href="#">Скачать</a></li>
+            <li><a class="link" href="#">Посмотреть на сайте</a></li>
           </ul>
         </div>
         <div>
-          <h3 class="title-small mb-16 text-white">О застройщике</h3>
-          <ul class="list text-white">
-            <li><a class="link text-white" href="#">Отзывы</a></li>
-            <li><a class="link text-white" href="#">Сайт компании</a></li>
+          <h3 class="mb-16">О застройщике</h3>
+          <ul class="list">
+            <li><a class="link" href="#">Отзывы</a></li>
+            <li><a class="link" href="#">Сайт компании</a></li>
           </ul>
         </div>
       </div>
