--- a/src/index.html
+++ b/src/index.html
@@ -35,13 +35,13 @@
     </section>
 
     <section id="advantages">
-      <div class="container row justify-content-between">
-        <div class="flex-basis-280">
+      <div class="d-flex container justify-content-between flex-wrap">
+        <div class="flex-0-1-280 flex-1-1-280-xs">
           <h2 class="mb-16">Уникальный вид</h2>
           <p>Вид на космос из вашего окна. Мы построили дома с большими окнами, чтобы вы могли наслаждаться метеоритными потоками.</p>
         </div>
 
-        <div class="flex-basis-280">
+        <div class="flex-0-1-280 flex-1-1-280-xs">
           <h2 class="mb-16">Инфраструктура</h2>
           <p>
             Прекрасные дороги рядом с домом. Много мест для прогулки.
@@ -49,7 +49,7 @@
           </p>
         </div>
 
-        <div class="flex-basis-280">
+        <div class="flex-0-1-280 flex-1-1-280-xs">
           <h2 class="mb-16">Близость к Москве</h2>
           <p>При небольшой цене мы располагаемся близко к МКАД. Всего 384 000 километров и вы в самом сердце России.</p>
         </div>
@@ -57,41 +57,37 @@
     </section>
 
     <section id="about" class="bg-gray">
-      <div class="container">
-        <div class="d-flex justify-content-around flex-wrap">
-          <div class="flex-basis-500">
-            <h2>О ЖК «Лунное море»</h2>
+      <div class="container d-flex justify-content-around flex-wrap">
+        <div class="flex-basis-500">
+          <h2>О ЖК «Лунное море»</h2>
 
-            <p>
-              Все чаще жители Москвы предпочитают загородный дом городской квартире, к тому же связь с мегаполисом не теряется – 
-              современные скоростные трассы позволяют без труда добираться до столицы и обратно.
-            </p>
+          <p>
+            Все чаще жители Москвы предпочитают загородный дом городской квартире, к тому же связь с мегаполисом не теряется – 
+            современные скоростные трассы позволяют без труда добираться до столицы и обратно.
+          </p>
 
-            <p>
-              Мы построили наши дома на самом близком к Солнцу спутнике, всего в 380 тысяч километров от Земли.
-            </p>
-          </div>
-
-          <img class="mh-210" src="/images/moon-1.jpg" alt="moon" />
+          <p>
+            Мы построили наши дома на самом близком к Солнцу спутнике, всего в 380 тысяч километров от Земли.
+          </p>
         </div>
+
+        <img class="mh-210" src="/images/moon-1.jpg" alt="moon" />
       </div>
     </section>
 
     <section id="places">
-      <div class="container">
-        <div class="d-flex justify-content-around flex-wrap">
-          <img class="mh-210" src="/images/moon-2.jpg" alt="moon">
+      <div class="container d-flex justify-content-around flex-wrap">
+        <img class="mh-210" src="/images/moon-2.jpg" alt="moon">
 
-          <div class="flex-basis-500">
-            <h2>Места для отдыха</h2>
-            <p>
-              Луна обладает всеми условиями для комфортного отдыха от большого города.
-              В вашем распоряжении 22 моря и 18 гор. Самое ближайшее кольцо гор всего в 200 километров от вашей квартиры.
-            </p>
-            <p>
-              Дома располагаются в новом районе «Лунные моря». При необходимости есть автобусы до района «Лунный материк».
-            </p>
-          </div>
+        <div class="flex-basis-500">
+          <h2>Места для отдыха</h2>
+          <p>
+            Луна обладает всеми условиями для комфортного отдыха от большого города.
+            В вашем распоряжении 22 моря и 18 гор. Самое ближайшее кольцо гор всего в 200 километров от вашей квартиры.
+          </p>
+          <p>
+            Дома располагаются в новом районе «Лунные моря». При необходимости есть автобусы до района «Лунный материк».
+          </p>
         </div>
       </div>
     </section>
@@ -100,7 +96,7 @@
       <div class="container d-flex flex-column align-items-center">
         <h2 class="mb-16px">Оставьте заявку сегодня!</h2>
 
-        <form class="contact-form" action="/contact" method="POST">
+        <form class="contact-form w-460 w-325-xs" action="/contact" method="POST">
           <fieldset class="contact-form-fieldset">
             <legend class="contact-form-legend font-weight-bold">Параметры квартиры</legend>
             
